--- a/Links/style.css
+++ b/Links/style.css
@@ -148,6 +148,28 @@ nav li button.nav-btn {
 }
 
 @media screen and (max-width: 500px){
+    
+    nav li button.nav-btn {
+        justify-content: center;
+        align-items: center;  
+        text-align: center;
+        background: none;
+        border: none;
+        padding-left: 10px;
+        padding-right: 10px;
+        cursor: pointer;
+        font-size: large;
+    }
+    
+    nav ul {
+        min-width: 70vw;
+        list-style-type: none;
+        margin: 10px;
+        padding: 0;
+        overflow: hidden;
+        background-color: #324958;
+        border-radius: 25px;
+    }
 
     .nav-grid {
         display: grid;
@@ -171,7 +193,7 @@ nav li button.nav-btn {
         display: block;
         color: #ffd5ba;
         text-align: center;
-        padding: 10px 3px !important; 
+        padding: 10px 10px !important; 
         text-decoration: none;
         margin: 6px;
     }
