--- a/Projects/style.css
+++ b/Projects/style.css
@@ -66,6 +66,32 @@ header {
     text-align: center;
 }
 
+@media screen and (max-width: 500px){
+    
+    nav li button.nav-btn {
+        justify-content: center;
+        align-items: center;  
+        text-align: center;
+        background: none;
+        border: none;
+        padding-left: 10px;
+        padding-right: 10px;
+        cursor: pointer;
+        font-size: large;
+    }
+    
+    nav ul {
+        min-width: 70vw;
+        list-style-type: none;
+        margin: 10px;
+        padding: 0;
+        overflow: hidden;
+        background-color: #324958;
+        border-radius: 25px;
+    }
+    
+}
+
 .nav-grid a {
     text-decoration: none;
 }
@@ -163,6 +189,7 @@ nav li button.nav-btn a:hover {
 }
 
 nav ul {
+    max-width: 1000px;
     list-style-type: none;
     margin: 10px;
     padding: 0;
