--- a/style.css
+++ b/style.css
@@ -84,6 +84,28 @@ nav li button.nav-btn {
 }
 
 @media screen and (max-width: 500px){
+
+    nav li button.nav-btn {
+        justify-content: center;
+        align-items: center;  
+        text-align: center;
+        background: none;
+        border: none;
+        padding-left: 10px;
+        padding-right: 10px;
+        cursor: pointer;
+        font-size: large;
+    }
+    
+    nav ul {
+        min-width: 70vw;
+        list-style-type: none;
+        margin: 10px;
+        padding: 0;
+        overflow: hidden;
+        background-color: #324958;
+        border-radius: 25px;
+    }
     
     nav li button.nav-btn a {
         display: block;
@@ -116,6 +138,7 @@ nav li button.nav-btn a:hover {
 }
 
 nav ul {
+    max-width: 1000px;
     list-style-type: none;
     margin: 10px;
     padding: 0;
