--- a/Links/style.css
+++ b/Links/style.css
@@ -162,7 +162,7 @@ nav li button.nav-btn {
     }
     
     nav ul {
-        min-width: 70vw;
+        min-width: 300px;
         list-style-type: none;
         margin: 10px;
         padding: 0;
