--- a/Links/style.css
+++ b/Links/style.css
@@ -62,6 +62,54 @@ header {
     text-align: center;
 }
 
+.nav-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;  
+}
+
+nav ul {
+    max-width: 1000px;
+    list-style-type: none;
+    margin: 10px;
+    padding: 0;
+    overflow: hidden;
+    background-color: #324958;
+    border-radius: 25px;
+}
+
+nav li {
+    display: inline-block;
+}
+
+nav li button.nav-btn {
+    background: none;
+    border: none;
+    padding: 0;
+    cursor: pointer;
+    font-size: large;
+    
+}
+
+nav li button.nav-btn a {
+    display: block;
+    color: #ffd5ba;
+    text-align: center;
+    padding: 10px 20px;
+    text-decoration: none;
+    margin: 6px;
+}
+
+nav li button.nav-btn a:active {
+    background-color: #151e24;
+    border-radius:  100px;
+}
+
+nav li button.nav-btn a:hover {
+    background-color: #151e24;
+    border-radius:  100px;
+}
+
 .nav-grid a {
     text-decoration: none;
 }
@@ -134,19 +182,6 @@ header {
     background-color: #dc7f42;
 }
 
-nav li {
-    display: inline-block;
-}
-
-nav li button.nav-btn {
-    background: none;
-    border: none;
-    padding: 0;
-    cursor: pointer;
-    font-size: large;
-    
-}
-
 @media screen and (max-width: 500px){
     
     nav li button.nav-btn {
@@ -155,8 +190,6 @@ nav li button.nav-btn {
         text-align: center;
         background: none;
         border: none;
-        padding-left: 10px;
-        padding-right: 10px;
         cursor: pointer;
         font-size: large;
     }
@@ -188,50 +221,8 @@ nav li button.nav-btn {
         align-items: center;
         margin-top: 40px;
     }
-    
-    nav li button.nav-btn a {
-        display: block;
-        color: #ffd5ba;
-        text-align: center;
-        padding: 10px 10px !important; 
-        text-decoration: none;
-        margin: 6px;
-    }
 }
 
-nav li button.nav-btn a {
-    display: block;
-    color: #ffd5ba;
-    text-align: center;
-    padding: 10px 20px;
-    text-decoration: none;
-    margin: 6px;
-}
-
-nav li button.nav-btn a:active {
-    background-color: #151e24;
-    border-radius:  100px;
-}
-
-nav li button.nav-btn a:hover {
-    background-color: #151e24;
-    border-radius:  100px;
-}
-
-.nav-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;  
-}
-
-nav ul {
-    list-style-type: none;
-    margin: 10px;
-    padding: 0;
-    overflow: hidden;
-    background-color: #324958;
-    border-radius: 25px;
-}
 
 .about {
     max-width: 1150px;
